--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@
 # 3. Password : (no password)
 
 
-#DB properties : Connec to mysql
+#DB properties : Connect to mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/libraryDb?createTableIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
 
