--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # 1. URL (To which Database this application should connect)
 # 2. Username : root
-# 3. Password : (no password)
+# 3. Password : (password)
 
 
 #DB properties : Connect to mysql
@@ -12,6 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 #Inorder to connect with your Email you need to add some configurations
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=springacciojob@gmail.com
